💄 fixed modals being too tall on mobile

--- a/files/css/_base.scss
+++ b/files/css/_base.scss
@@ -461,11 +461,18 @@ main {
     @extend .flex, .down, .center, .middle;
 
     position: fixed;
-    top: 0; left: 0;
+    top: 0; left: 0; right: 0; bottom: 0;
     width: 100%; height: 100%;
     background-color: var(--shadow);
     z-index: 1000;
     backdrop-filter: blur(0.5em);
+
+    & > .card {
+        --margin: 0.5em;
+        margin: var(--margin);
+        max-height: calc(100vh - 2 * var(--margin));
+        overflow-y: auto;
+    }
 }
 
 [role="pagination"] {
